Fix issue with -webkit-filter on mobile webkit

--- a/css/vex-theme-default.css
+++ b/css/vex-theme-default.css
@@ -478,18 +478,29 @@
   -webkit-backface-visibility: hidden;
   outline: none;
 }
-/* line 109, ../sass/vex-theme-default.sass */
+@media (max-width: 568px) {
+  /* line 105, ../sass/vex-theme-default.sass */
+  .vex.vex-theme-default .vex-dialog-form .vex-dialog-buttons .vex-dialog-button:focus {
+    animation: none;
+    -webkit-animation: none;
+    -moz-animation: none;
+    -ms-animation: none;
+    -o-animation: none;
+    -webkit-backface-visibility: hidden;
+  }
+}
+/* line 114, ../sass/vex-theme-default.sass */
 .vex.vex-theme-default .vex-dialog-form .vex-dialog-buttons .vex-dialog-button.vex-dialog-button-primary {
   background: #3288e6;
   color: white;
 }
-/* line 113, ../sass/vex-theme-default.sass */
+/* line 118, ../sass/vex-theme-default.sass */
 .vex.vex-theme-default .vex-dialog-form .vex-dialog-buttons .vex-dialog-button.vex-dialog-button-secondary {
   background: #e0e0e0;
   color: #777777;
 }
 
-/* line 117, ../sass/vex-theme-default.sass */
+/* line 122, ../sass/vex-theme-default.sass */
 .vex-loading-spinner.vex-theme-default {
   -webkit-box-shadow: 0 0 0 0.5em #f0f0f0, 0 0 1px 0.5em rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 0 0 0.5em #f0f0f0, 0 0 1px 0.5em rgba(0, 0, 0, 0.3);
