--- a/sass/vex-theme-os.sass
+++ b/sass/vex-theme-os.sass
@@ -110,6 +110,11 @@ $blue: #3288e6
                     +vex-animation(vex-pulse 1.1s infinite)
                     outline: none
 
+                    // vex-pulse uses -webkit-filter which
+                    // doesn't play so nice in mobile webkit
+                    @media (max-width: 568px)
+                        +vex-animation(none)
+
                 &.vex-dialog-button-primary
                     background: $blue
                     color: #fff
