--- a/sass/vex-theme-wireframe.sass
+++ b/sass/vex-theme-wireframe.sass
@@ -95,6 +95,11 @@
                     +vex-animation(vex-pulse 1.1s infinite)
                     outline: none
 
+                    // vex-pulse uses -webkit-filter which
+                    // doesn't play so nice in mobile webkit
+                    @media (max-width: 568px)
+                        +vex-animation(none)
+
                 &.vex-dialog-button-primary
                     background: #000
                     color: #fff
